tests/baselines/reference/missingRequiredDeclare.d.errors.txt
==== tests/cases/compiler/missingRequiredDeclare.d.ts (1 errors) ====
    var x = 1;
    ~~~
!!! missingRequiredDeclare.d.ts(1,1): error TS1046: 'declare' modifier required for top level element.